--- a/index.html
+++ b/index.html
@@ -299,15 +299,12 @@
             </div>
             <div class="container-poll">
                 <ul class="poll-test-pooll">
-                    <li class="poll color">What paperwork do I need to complete to file for divorce?<span
-                            class="poll-test">-</span></li>
-                    <li class="poll">How do I change my custody and suport orders?<span class="poll-test-2">+</span>
-                    </li>
-                    <li class="poll">How to make a General Diary?<span class="poll-test-3">+</span></li>
-                    <li class="poll">What paperwork do I need to complete to file for divorce?<span
-                            class="poll-test">+</span></li>
-                    <li class="poll">How do I protect a business name?<span class="poll-test-4">+</span></li>
-                    <li class="poll">Should I incorporate my business?<span class="poll-test-4">+</span></li>
+                    <li class="poll color">What paperwork do I need to complete to file for divorce?<a href="#" class="poll-test">-</a></li>
+                    <li class="poll">How do I change my custody and suport orders?><a href="#" class="poll-test-2">+</a></li>
+                    <li class="poll">How to make a General Diary?><a href="#" class="poll-test-3">+</a></li>
+                    <li class="poll">What paperwork do I need to complete to file for divorce?><a href="#" class="poll-test-1">+</a></li>
+                    <li class="poll">How do I protect a business name?><a href="#" class="poll-test-4">+</a></li>
+                    <li class="poll">Should I incorporate my business?><a href="#" class="poll-test-4">+</a></li>
                 </ul>
                 <div class="text-arial"><p>Long established fact that a reader will be distracted by <br>
                     the readable content of a page when looking at its layout. The point of using Lorem <br>
